[package]
name = "edge"
version = "0.1.0"
authors = ["Bene <37740907+Nereuxofficial@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c6-hal", version = "0.1.0" }
esp-backtrace = { version = "0.6.0", features = ["esp32c6", "panic-handler", "print-uart"] }
esp-println       = { version = "0.4.0", features = ["esp32c6"] }
esp-alloc = { version = "0.2.0", features = ["oom-handler"] }
