[package]
name = "edge"
version = "0.1.0"
authors = ["Bene <37740907+Nereuxofficial@users.noreply.github.com>","Tori <104529284+ToriTheGreenOne@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c3-hal", version = "0.9.0", features=["embassy", "async", "embassy-time-timg0"]}
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32c3", "log"] }
esp-alloc = { version = "0.3.0" }
esp-wifi = { git="https://github.com/esp-rs/esp-wifi", features = ["esp32c3", "async", "esp-now"], rev = "8e35b68c4aaed2c6a4d1159dd1c1287a5a2359be"}
embassy-sync = "0.3.0"
embassy-time = { version = "0.1.0", features = ["nightly"] }
embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
futures-util = { version = "0.3.17", default-features = false }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
log = "0.4.17"
embassy-futures = "0.1.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
embedded-hal = { version = "0.2", features = ["unproven"] }
dht-sensor ={ version = "0.2.1", optional=true}

postcard = "1.0.4"
tsl2591 = { version = "0.2.0", optional = true}
# For acessing and writing the flash storage
esp-storage = { version = "0.1.0", features = ["esp32c3"] }
embedded-storage = "0.3.0"

[features]
default = []
dht11 = ["dep:dht-sensor"]
dht22 = ["dep:dht-sensor"]
hw390 = []
tsl2591 = ["dep:tsl2591"]


[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"

[profile.release]
lto = "off"
